// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Validation of importer output against ArkType schema validate C 1`] = `
{
  "errors": [],
  "items": {
    "Battery": {
      "fields": {
        "current_ma": {
          "align": 4,
          "binaryType": "i32",
          "label": "current_ma",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
        "flags": {
          "align": 1,
          "binaryType": "u8",
          "label": "flags",
          "max": 255,
          "min": 0,
          "popKind": "binary",
          "size": 1,
          "type": "number",
        },
        "voltage_mv": {
          "align": 4,
          "binaryType": "u32",
          "label": "voltage_mv",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Battery",
      "popKind": "rich",
      "type": "object",
      "typeString": "Battery",
    },
    "BatteryDoc": {
      "description": "Battery payload.",
      "fields": {
        "voltage_mv": {
          "align": 4,
          "binaryType": "u32",
          "description": "Voltage.",
          "label": "voltage_mv",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "BatteryDoc",
      "popKind": "rich",
      "type": "object",
      "typeString": "BatteryDoc",
    },
    "DeviceId": {
      "align": 4,
      "binaryType": "u32",
      "label": "DeviceId",
      "max": 4294967295,
      "min": 0,
      "popKind": "rich",
      "size": 4,
      "type": "number",
    },
    "DeviceStatus": {
      "label": "DeviceStatus",
      "options": [
        "DS_IDLE",
        "DS_ACTIVE",
        "DS_ERROR",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "DeviceStatus",
    },
    "Inner": {
      "fields": {
        "x": {
          "align": 4,
          "binaryType": "u32",
          "label": "x",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Inner",
      "popKind": "rich",
      "type": "object",
      "typeString": "Inner",
    },
    "Mix": {
      "fields": {
        "a": {
          "align": 4,
          "binaryType": "f32",
          "label": "a",
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
        "b": {
          "align": 8,
          "binaryType": "f64",
          "label": "b",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
        "c": {
          "align": 1,
          "binaryType": "boolean",
          "label": "c",
          "popKind": "bitwise",
          "size": 1,
          "type": "boolean",
        },
        "d": {
          "align": 1,
          "binaryType": "u8",
          "label": "d",
          "max": 255,
          "min": 0,
          "popKind": "binary",
          "size": 1,
          "type": "number",
        },
      },
      "label": "Mix",
      "popKind": "rich",
      "type": "object",
      "typeString": "Mix",
    },
    "Outer": {
      "fields": {
        "inner": {
          "label": "inner",
          "target": "Inner",
          "type": "link",
        },
      },
      "label": "Outer",
      "popKind": "rich",
      "type": "object",
      "typeString": "Outer",
    },
    "Quirky": {
      "fields": {},
      "label": "Quirky",
      "popKind": "rich",
      "type": "object",
      "typeString": "Quirky",
    },
    "RawFrame": {
      "fields": {
        "channel": {
          "align": 1,
          "binaryType": "u8",
          "label": "channel",
          "max": 255,
          "min": 0,
          "popKind": "binary",
          "size": 1,
          "type": "number",
        },
        "length": {
          "align": 2,
          "binaryType": "u16",
          "label": "length",
          "max": 65535,
          "min": 0,
          "popKind": "binary",
          "size": 2,
          "type": "number",
        },
      },
      "label": "RawFrame",
      "popKind": "rich",
      "type": "object",
      "typeString": "RawFrame",
    },
    "Serial": {
      "fields": {
        "bytes": {
          "exactLength": 16,
          "item": {
            "align": 1,
            "binaryType": "u8",
            "label": "bytesItem",
            "max": 255,
            "min": 0,
            "popKind": "binary",
            "size": 1,
            "type": "number",
          },
          "label": "bytes",
          "type": "array",
        },
      },
      "label": "Serial",
      "popKind": "rich",
      "type": "object",
      "typeString": "Serial",
    },
    "battery_get": {
      "args": [
        {
          "binaryType": "u32",
          "label": "id",
          "type": "number",
        },
        {
          "binaryType": "u8",
          "label": "flags",
          "type": "number",
        },
      ],
      "label": "battery_get",
      "returns": {
        "label": "battery_getReturn",
        "target": "Battery",
        "type": "link",
      },
      "type": "function",
    },
    "crc32": {
      "args": [
        {
          "binaryType": "u8",
          "label": "data",
          "type": "number",
        },
        {
          "binaryType": "u32",
          "label": "len",
          "type": "number",
        },
      ],
      "description": "Compute CRC.",
      "label": "crc32",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "crc32Return",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
    "device_reset": {
      "args": [
        {
          "binaryType": "u32",
          "label": "id",
          "type": "number",
        },
      ],
      "label": "device_reset",
      "returns": {
        "label": "device_resetReturn",
        "type": "unit",
      },
      "type": "function",
    },
    "get_tick": {
      "args": [],
      "label": "get_tick",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "get_tickReturn",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
  },
  "skipped": [
    {
      "name": "Quirky.valid",
      "reason": "unsupported field shape",
    },
    {
      "name": "Quirky.(*callback)(int)",
      "reason": "unsupported field shape",
    },
    {
      "name": "Quirky.*next",
      "reason": "unsupported field shape",
    },
  ],
  "source": "importer/fixtures/walk/source.c",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Rust 1`] = `
{
  "errors": [],
  "items": {
    "Battery": {
      "fields": {
        "current_ma": {
          "align": 4,
          "binaryType": "i32",
          "label": "current_ma",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
        "flags": {
          "align": 1,
          "binaryType": "u8",
          "label": "flags",
          "max": 255,
          "min": 0,
          "popKind": "binary",
          "size": 1,
          "type": "number",
        },
        "voltage_mv": {
          "align": 4,
          "binaryType": "u32",
          "label": "voltage_mv",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Battery",
      "popKind": "rich",
      "type": "object",
      "typeString": "Battery",
    },
    "BatteryDoc": {
      "description": "Battery info packet.",
      "fields": {
        "voltage_mv": {
          "align": 4,
          "binaryType": "u32",
          "description": "Voltage in millivolts.",
          "label": "voltage_mv",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "BatteryDoc",
      "popKind": "rich",
      "type": "object",
      "typeString": "BatteryDoc",
    },
    "Bundle": {
      "fields": {
        "maybe": {
          "align": 4,
          "binaryType": "u32",
          "label": "maybe",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "required": false,
          "size": 4,
          "type": "number",
        },
        "samples": {
          "item": {
            "align": 2,
            "binaryType": "i16",
            "label": "samplesItem",
            "max": 32767,
            "min": -32768,
            "popKind": "binary",
            "size": 2,
            "type": "number",
          },
          "label": "samples",
          "type": "array",
        },
      },
      "label": "Bundle",
      "popKind": "rich",
      "type": "object",
      "typeString": "Bundle",
    },
    "DeviceId": {
      "align": 4,
      "binaryType": "u32",
      "label": "DeviceId",
      "max": 4294967295,
      "min": 0,
      "popKind": "rich",
      "size": 4,
      "type": "number",
    },
    "Inner": {
      "fields": {
        "v": {
          "align": 4,
          "binaryType": "u32",
          "label": "v",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Inner",
      "popKind": "rich",
      "type": "object",
      "typeString": "Inner",
    },
    "Outer": {
      "fields": {
        "inner": {
          "label": "inner",
          "target": "Inner",
          "type": "link",
        },
      },
      "label": "Outer",
      "popKind": "rich",
      "type": "object",
      "typeString": "Outer",
    },
    "Serial": {
      "fields": {
        "bytes": {
          "item": {
            "align": 1,
            "binaryType": "u8",
            "label": "bytesItem",
            "max": 255,
            "min": 0,
            "popKind": "binary",
            "size": 1,
            "type": "number",
          },
          "label": "bytes",
          "maxLength": 16,
          "minLength": 16,
          "type": "array",
        },
      },
      "label": "Serial",
      "popKind": "rich",
      "type": "object",
      "typeString": "Serial",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
        "Suspended",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "add": {
      "args": [
        {
          "binaryType": "u32",
          "label": "a",
          "type": "number",
        },
        {
          "binaryType": "u32",
          "label": "b",
          "type": "number",
        },
      ],
      "label": "add",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "addReturn",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
    "cb": {
      "abi": "C",
      "args": [
        {
          "binaryType": "i32",
          "label": "x",
          "type": "number",
        },
      ],
      "label": "cb",
      "returns": {
        "label": "cbReturn",
        "type": "unit",
      },
      "type": "function",
    },
    "checksum": {
      "args": [
        {
          "binaryType": "u32",
          "label": "data",
          "type": "number",
        },
      ],
      "description": "Compute checksum.",
      "label": "checksum",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "checksumReturn",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
    "libc_exit": {
      "abi": "C",
      "args": [
        {
          "binaryType": "i32",
          "label": "code",
          "type": "number",
        },
      ],
      "label": "libc_exit",
      "returns": {
        "label": "libc_exitReturn",
        "type": "unit",
      },
      "type": "function",
    },
    "libc_sleep": {
      "abi": "C",
      "args": [
        {
          "binaryType": "u32",
          "label": "secs",
          "type": "number",
        },
      ],
      "label": "libc_sleep",
      "returns": {
        "align": 4,
        "binaryType": "i32",
        "label": "libc_sleepReturn",
        "max": 2147483647,
        "min": -2147483648,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
  },
  "skipped": [
    {
      "name": "Wrapper",
      "reason": "generic struct",
    },
    {
      "name": "id",
      "reason": "generic function",
    },
  ],
  "source": "importer/fixtures/walk/source.rs",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate TypeScript 1`] = `
{
  "errors": [],
  "items": {
    "ArrayTest": {
      "fields": {
        "xs": {
          "item": {
            "align": 8,
            "binaryType": "f64",
            "label": "xsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "xs",
          "type": "array",
        },
      },
      "label": "ArrayTest",
      "popKind": "rich",
      "type": "object",
      "typeString": "ArrayTest",
    },
    "Either": {
      "label": "Either",
      "originalType": "Foo | Bar",
      "popKind": "rich",
      "type": "any",
    },
    "Exported": {
      "fields": {
        "x": {
          "align": 8,
          "binaryType": "f64",
          "label": "x",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Exported",
      "popKind": "rich",
      "type": "object",
      "typeString": "Exported",
    },
    "I": {
      "fields": {
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
        "x": {
          "align": 8,
          "binaryType": "f64",
          "label": "x",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "I",
      "popKind": "rich",
      "type": "object",
      "typeString": "I",
    },
    "Mode": {
      "label": "Mode",
      "options": [
        "Idle",
        "Active",
        "Error",
        "Offline",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Mode",
    },
    "Reading": {
      "fields": {
        "sensor_id": {
          "align": 8,
          "binaryType": "f64",
          "label": "sensor_id",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
        "value": {
          "align": 8,
          "binaryType": "f64",
          "label": "value",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Reading",
      "popKind": "rich",
      "type": "object",
      "typeString": "Reading",
    },
    "Severity": {
      "label": "Severity",
      "options": [
        "Info",
        "Warn",
        "Error",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Severity",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "tags": {
          "item": {
            "align": 8,
            "binaryType": "f64",
            "label": "tagsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "tags",
          "type": "array",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "f64",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
    "TelemetryDoc": {
      "description": "Telemetry packet.",
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "f64",
          "description": "Monotonic clock.",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "TelemetryDoc",
      "popKind": "rich",
      "type": "object",
      "typeString": "TelemetryDoc",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.ts",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Python 1`] = `
{
  "errors": [],
  "items": {
    "Data": {
      "fields": {
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
        "other": {
          "align": 8,
          "binaryType": "i64",
          "label": "other",
          "popKind": "binary",
          "required": false,
          "size": 8,
          "type": "number",
        },
        "tags": {
          "item": {
            "align": 8,
            "binaryType": "i64",
            "label": "tagsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "tags",
          "type": "array",
        },
      },
      "label": "Data",
      "popKind": "rich",
      "type": "object",
      "typeString": "Data",
    },
    "Device": {
      "description": "Represents a connected device.",
      "fields": {
        "id": {
          "align": 8,
          "binaryType": "i64",
          "description": "Unique ID.",
          "label": "id",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Device",
      "popKind": "rich",
      "type": "object",
      "typeString": "Device",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
    "TelemetryAssign": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "TelemetryAssign",
      "popKind": "rich",
      "type": "object",
      "typeString": "TelemetryAssign",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.py",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Java 1`] = `
{
  "errors": [],
  "items": {
    "I": {
      "fields": {
        "xs": {
          "item": {
            "label": "xsItem",
            "type": "string",
          },
          "label": "xs",
          "type": "array",
        },
      },
      "label": "I",
      "popKind": "rich",
      "type": "object",
      "typeString": "I",
    },
    "Severity": {
      "label": "Severity",
      "options": [
        "Info",
        "Warn",
        "Error",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Severity",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 4,
          "binaryType": "i32",
          "label": "uptime_ms",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
    "TelemetryRecord": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 4,
          "binaryType": "i32",
          "label": "uptime_ms",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "TelemetryRecord",
      "popKind": "rich",
      "type": "object",
      "typeString": "TelemetryRecord",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.java",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Go 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "Items": {
          "item": {
            "align": 8,
            "binaryType": "i64",
            "label": "ItemsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "Items",
          "type": "array",
        },
        "Matrix": {
          "item": {
            "align": 1,
            "binaryType": "u8",
            "label": "MatrixItem",
            "max": 255,
            "min": 0,
            "popKind": "binary",
            "size": 1,
            "type": "number",
          },
          "label": "Matrix",
          "maxLength": 16,
          "minLength": 16,
          "type": "array",
        },
        "Ref": {
          "label": "Ref",
          "required": false,
          "target": "Config",
          "type": "link",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "DeviceId": {
      "align": 4,
      "binaryType": "u32",
      "label": "DeviceId",
      "max": 4294967295,
      "min": 0,
      "popKind": "rich",
      "size": 4,
      "type": "number",
    },
    "Telemetry": {
      "fields": {
        "Status": {
          "label": "Status",
          "type": "string",
        },
        "Uptime": {
          "align": 8,
          "binaryType": "i64",
          "label": "Uptime",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.go",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Swift 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "fallback": {
          "align": 1,
          "binaryType": "boolean",
          "label": "fallback",
          "popKind": "bitwise",
          "required": false,
          "size": 1,
          "type": "boolean",
        },
        "items": {
          "item": {
            "align": 8,
            "binaryType": "i64",
            "label": "itemsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "items",
          "type": "array",
        },
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "DeviceId": {
      "align": 4,
      "binaryType": "u32",
      "label": "DeviceId",
      "max": 4294967295,
      "min": 0,
      "popKind": "rich",
      "size": 4,
      "type": "number",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptimeMs": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptimeMs",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.swift",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Dart 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "items": {
          "item": {
            "align": 8,
            "binaryType": "i64",
            "label": "itemsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "items",
          "type": "array",
        },
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "Status": {
      "label": "Status",
      "options": [
        "idle",
        "active",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptimeMs": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptimeMs",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.dart",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Kotlin 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "id": {
          "align": 8,
          "binaryType": "i64",
          "label": "id",
          "popKind": "binary",
          "required": false,
          "size": 8,
          "type": "number",
        },
        "isActive": {
          "align": 1,
          "binaryType": "boolean",
          "label": "isActive",
          "popKind": "bitwise",
          "size": 1,
          "type": "boolean",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "Matrix": {
      "fields": {
        "bytes": {
          "item": {
            "align": 1,
            "binaryType": "i8",
            "label": "bytesItem",
            "max": 127,
            "min": -128,
            "popKind": "binary",
            "size": 1,
            "type": "number",
          },
          "label": "bytes",
          "type": "array",
        },
        "counts": {
          "item": {
            "align": 4,
            "binaryType": "i32",
            "label": "countsItem",
            "max": 2147483647,
            "min": -2147483648,
            "popKind": "binary",
            "size": 4,
            "type": "number",
          },
          "label": "counts",
          "type": "array",
        },
        "tags": {
          "item": {
            "label": "tagsItem",
            "type": "string",
          },
          "label": "tags",
          "type": "array",
        },
      },
      "label": "Matrix",
      "popKind": "rich",
      "type": "object",
      "typeString": "Matrix",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptimeMs": {
          "align": 4,
          "binaryType": "i32",
          "label": "uptimeMs",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
    "Visible": {
      "fields": {
        "publicValue": {
          "align": 4,
          "binaryType": "i32",
          "label": "publicValue",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Visible",
      "popKind": "rich",
      "type": "object",
      "typeString": "Visible",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.kt",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Scala 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "items": {
          "item": {
            "align": 4,
            "binaryType": "i32",
            "label": "itemsItem",
            "max": 2147483647,
            "min": -2147483648,
            "popKind": "binary",
            "size": 4,
            "type": "number",
          },
          "label": "items",
          "type": "array",
        },
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptimeMs": {
          "align": 4,
          "binaryType": "i32",
          "label": "uptimeMs",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.scala",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Elixir 1`] = `
{
  "errors": [],
  "items": {
    "Config": {
      "fields": {
        "items": {
          "label": "items",
          "originalType": "any",
          "type": "any",
        },
        "tag": {
          "label": "tag",
          "originalType": "any",
          "type": "any",
        },
      },
      "label": "Config",
      "popKind": "rich",
      "type": "object",
      "typeString": "Config",
    },
    "Telemetry": {
      "fields": {
        "flags": {
          "item": {
            "align": 8,
            "binaryType": "i64",
            "label": "flagsItem",
            "popKind": "binary",
            "size": 8,
            "type": "number",
          },
          "label": "flags",
          "type": "array",
        },
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptime",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.ex",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate PHP 1`] = `
{
  "errors": [],
  "items": {
    "I": {
      "fields": {
        "note": {
          "label": "note",
          "required": false,
          "type": "string",
        },
      },
      "label": "I",
      "popKind": "rich",
      "type": "object",
      "typeString": "I",
    },
    "Severity": {
      "label": "Severity",
      "options": [
        "Info",
        "Warn",
        "Error",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Severity",
    },
    "Telemetry": {
      "fields": {
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.php",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate C++ 1`] = `
{
  "errors": [],
  "items": {
    "DeviceId": {
      "align": 4,
      "binaryType": "u32",
      "label": "DeviceId",
      "max": 4294967295,
      "min": 0,
      "popKind": "rich",
      "size": 4,
      "type": "number",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
        "Error",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "okon::Battery": {
      "fields": {
        "voltage_mv": {
          "align": 4,
          "binaryType": "u32",
          "label": "voltage_mv",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "okon::Battery",
      "popKind": "rich",
      "type": "object",
      "typeString": "Battery",
    },
    "okon::Bundle": {
      "fields": {
        "id": {
          "align": 4,
          "binaryType": "u32",
          "label": "id",
          "max": 4294967295,
          "min": 0,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
        "scale": {
          "align": 4,
          "binaryType": "f32",
          "label": "scale",
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "okon::Bundle",
      "popKind": "rich",
      "type": "object",
      "typeString": "Bundle",
    },
    "okon::do_thing": {
      "args": [
        {
          "binaryType": "u8",
          "label": "x",
          "type": "number",
        },
      ],
      "label": "okon::do_thing",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "okon::do_thingReturn",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
    "plain": {
      "args": [
        {
          "binaryType": "u8",
          "label": "x",
          "type": "number",
        },
      ],
      "label": "plain",
      "returns": {
        "align": 4,
        "binaryType": "u32",
        "label": "plainReturn",
        "max": 4294967295,
        "min": 0,
        "popKind": "binary",
        "size": 4,
        "type": "number",
      },
      "type": "function",
    },
  },
  "skipped": [
    {
      "name": "Wrapper",
      "reason": "template type",
    },
    {
      "name": "identity(T x)",
      "reason": "template type",
    },
  ],
  "source": "importer/fixtures/walk/source.cpp",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate C# 1`] = `
{
  "errors": [],
  "items": {
    "Data": {
      "fields": {
        "Labels": {
          "item": {
            "label": "LabelsItem",
            "type": "string",
          },
          "label": "Labels",
          "type": "array",
        },
        "Numbers": {
          "item": {
            "align": 4,
            "binaryType": "i32",
            "label": "NumbersItem",
            "max": 2147483647,
            "min": -2147483648,
            "popKind": "binary",
            "size": 4,
            "type": "number",
          },
          "label": "Numbers",
          "type": "array",
        },
      },
      "label": "Data",
      "popKind": "rich",
      "type": "object",
      "typeString": "Data",
    },
    "Status": {
      "label": "Status",
      "options": [
        "Idle",
        "Active",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "Status": {
          "label": "Status",
          "type": "string",
        },
        "Uptime": {
          "align": 4,
          "binaryType": "i32",
          "label": "Uptime",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
    "TelemetryRecord": {
      "fields": {
        "Status": {
          "label": "Status",
          "type": "string",
        },
        "Uptime": {
          "align": 4,
          "binaryType": "i32",
          "label": "Uptime",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "TelemetryRecord",
      "popKind": "rich",
      "type": "object",
      "typeString": "TelemetryRecord",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.cs",
  "warnings": [],
}
`;

exports[`Validation of importer output against ArkType schema validate Objective-C 1`] = `
{
  "errors": [],
  "items": {
    "Device": {
      "description": "Device model",
      "fields": {
        "deviceId": {
          "align": 8,
          "binaryType": "i64",
          "description": "Unique identifier",
          "label": "deviceId",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Device",
      "popKind": "rich",
      "type": "object",
      "typeString": "Device",
    },
    "RawFrame": {
      "fields": {
        "length": {
          "align": 4,
          "binaryType": "i32",
          "label": "length",
          "max": 2147483647,
          "min": -2147483648,
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
        "scale": {
          "align": 4,
          "binaryType": "f32",
          "label": "scale",
          "popKind": "binary",
          "size": 4,
          "type": "number",
        },
      },
      "label": "RawFrame",
      "popKind": "rich",
      "type": "object",
      "typeString": "RawFrame",
    },
    "Status": {
      "label": "Status",
      "options": [
        "StatusIdle",
        "StatusActive",
      ],
      "popKind": "rich",
      "type": "enum",
      "typeString": "Status",
    },
    "Telemetry": {
      "fields": {
        "isActive": {
          "align": 1,
          "binaryType": "boolean",
          "label": "isActive",
          "popKind": "bitwise",
          "size": 1,
          "type": "boolean",
        },
        "status": {
          "label": "status",
          "type": "string",
        },
        "uptime_ms": {
          "align": 8,
          "binaryType": "i64",
          "label": "uptime_ms",
          "popKind": "binary",
          "size": 8,
          "type": "number",
        },
      },
      "label": "Telemetry",
      "popKind": "rich",
      "type": "object",
      "typeString": "Telemetry",
    },
  },
  "skipped": [],
  "source": "importer/fixtures/walk/source.m",
  "warnings": [],
}
`;
